--- a/src/main/resources/static/detailboard.html
+++ b/src/main/resources/static/detailboard.html
@@ -14,12 +14,12 @@
         <br>
         <p><span>작성자 : </span><span th:text="${board.name}"></span></p>
         <span>제목 : </span><span th:text="${board.title}"></span>
-        <br>
+        <br>board
         <p>내용</p>
         <p th:text="${board.text}"></p>
 
         <button th:id="${board.id}+editBoard" class="btn btn-primary" >수정하기</button>
-        <form action="#" th:action="@{/api/boards/delete/}+${board.id}" method="post">
+        <form action="#" th:action="@{/api/board/}+${board.id}+@{/delete}" method="post">
 
             <input type="submit" class="btn btn-primary" value="삭제하기">
             <input type="hidden" name="_method" value="delete"/>
@@ -35,7 +35,7 @@
         $('#[[${board.id}]]editBoard').click(
             function(event) {
                 var boardId = "[[${board.id}]]";
-                window.location.replace('/api/boards/edit/'+ boardId);
+                window.location.replace('/api/board/'+ boardId+'/edit');
 
             })
     </script>
