--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,13 +7,22 @@
 </head>
 <body>
 <div class="container">
-<h2>타임라인 페이지</h2>
-<!--<a href="/api/notice">글작성</a>-->
+<h2>Notice-Board</h2>
+    <br>
+<!--<a href="/api/board">글작성</a>-->
+<!--    <div id="header-title-login-user">-->
+<!--        <span th:text="${username}"></span> 님 환영합니다.-->
+<!--    </div>-->
     <center>
-        <button class="btn btn-primary" onclick="location.href='/api/notice'">글 작성</button>
+        <button class="btn btn-primary" onclick="location.href='/api/board'">글 작성</button>
     </center>
 <br>
-
+    <a id="login-text" href="/user/login">
+        로그인
+    </a>
+    <a id="logout-text" href="/user/logout">
+        로그아웃
+    </a>
 
 <table class="table table-striped text-center">
     <thead class ="thead-dark">
@@ -28,7 +37,7 @@
         <div th:each="board : ${board}" class="table table-striped text-center">
             <tr>
                 <td></td>
-                <th scope="col"><a th:href="@{/api/boards/}+${board.id}" th:text="${board.title}"> </a></th>
+                <th scope="col"><a th:href="@{/api/board/}+${board.id}" th:text="${board.title}"> </a></th>
                 <th scope="col" th:text="${board.name}"></th>
                 <th scope="col" th:text="${board.text}"></th>
             </tr>
