--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -15,13 +15,13 @@
 <body>
 <div id="login-form">
     <div id="login-title">Log into Select Shop</div>
-    <button id="login-kakao-btn" onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id=&redirect_uri=http://localhost:8080/user/kakao/callback&response_type=code'">
+    <button id="login-kakao-btn" onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id=e874ec34648c4f9d1174e502e3f33ea2&redirect_uri=http://localhost:8080/user/kakao/callback&response_type=code'">
         카카오로 로그인하기
     </button>
     <button id="login-id-btn" onclick="location.href='/user/signup'">
         회원 가입하기
     </button>
-    <div th:if="${loginError}" class="alert alert-danger" role="alert">로그인에 실패하였습니다.</div>
+    <div th:if="${loginError}" class="alert alert-danger" role="alert">아이디 또는 비밀번호를 확인해주세요.</div>
     <form action="/user/login" method="post">
         <div class="login-id-label">아이디</div>
         <input type="text" name="username" class="login-input-box">
