--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <meta charset="UTF-8">
     <title>회원가입 페이지</title>
     <script>
@@ -30,23 +31,30 @@
 <div id="login-form">
     <div id="login-title">Sign up Select Shop</div>
 
-    <form action="#" th:action="@{/user/signup}" th:object="${requestDto}" method="post" novalidate="">
-        <div class="login-id-label">Username</div>
-        <input th:field="*{username}" type="text" id="username" name="username" placeholder="Username" class="login-input-box">
-        <small class="form-text text-danger" th:errors="*{username}" th:if="${#fields.hasErrors('username')}">username</small>
+    <form class="form" action="#" th:action="@{/user/signup}" th:object="${requestDto}" method="post" novalidate="" style="width:370px">
+        <div class="form-group">
+            <div class="login-id-label">Username</div>
+            <input th:field="*{username}" type="text" id="username" name="username" placeholder="Username" class="login-input-box">
+            <small class="form-text text-danger" th:errors="*{username}" th:if="${#fields.hasErrors('username')}">username</small>
+        </div>
 
-        <div class="login-id-label">Password</div>
-        <input th:field="*{password}" type="password" id="password" name="password" class="login-input-box">
-        <small class="form-text text-danger" th:errors="*{password}" th:if="${#fields.hasErrors('password')}"></small>
+        <div class="form-group">
+            <div class="login-id-label">Password</div>
+            <input th:field="*{password}" type="password" id="password" name="password" class="login-input-box">
+            <small class="form-text text-danger" th:errors="*{password}" th:if="${#fields.hasErrors('password')}"></small>
+        </div>
 
-        <div class="login-id-label">비밀번호 확인</div>
-        <input th:field="*{checkpw}" type="password" id="checkpw" name="password" class="login-input-box">
-        <small class="form-text text-danger" th:errors="*{checkpw}" th:if="${#fields.hasErrors('checkpw')}"></small>
+        <div class="form-group">
+            <div class="login-id-label">비밀번호 확인</div>
+            <input th:field="*{checkpw}" type="password" id="checkpw" name="password" class="login-input-box">
+            <small class="form-text text-danger" th:errors="*{checkpw}" th:if="${#fields.hasErrors('checkpw')}"></small>
+        </div>
 
-
-        <div class="login-id-label">E-mail</div>
-        <input th:field="*{email}" type="text" id="email" name="email" placeholder="E-mail" class="login-input-box">
-        <small class="form-text text-danger" th:errors="*{email}" th:if="${#fields.hasErrors('email')}"></small>
+        <div class="form-group">
+            <div class="login-id-label">E-mail</div>
+            <input th:field="*{email}" type="text" id="email" name="email" placeholder="E-mail" class="login-input-box">
+            <small class="form-text text-danger" th:errors="*{email}" th:if="${#fields.hasErrors('email')}"></small>
+        </div>
 <!--        <div th:if="${error}" th:text="${error}" class="alert alert-danger" role="alert"></div>-->
         <button id="login-id-submit">회원 가입</button>
     </form>
