--- a/src/main/resources/static/board.html
+++ b/src/main/resources/static/board.html
@@ -10,21 +10,32 @@
 <div class="container">
 <h2 class = "container">게시글 작성</h2>
     <br>
-    <form class = container action = "#" th:action="@{/api/board}" th:object="${board}" method="post">
-        <div class="form-group">
-            <label for="exampleFormControlInput1">이름</label>
-            <input type="text" class="form-control" id="exampleFormControlInput1" th:field = "*{name}">
-        </div>
+    <form class = container action = "#" th:action="@{/api/board}" onsubmit="return check()" th:object="${board}" method="post">
 
         <div class="form-group">
-            <label for="exampleFormControlInput1">제목</label>
-            <input type="text" class="form-control" id="exampleFormControlInput2"  th:field = "*{title}">
+            <label for="title">제목</label>
+            <input type="text" class="form-control" id="title"  th:field = "*{title}">
         </div>
 
-        <div class="form-group"><textarea class="form-control"  placeholder="내용을 입력하세요." rows="6" th:field = "*{text}"></textarea></div>
+        <div class="form-group"><textarea id="textarea" class="form-control"  placeholder="내용을 입력하세요." rows="6" th:field = "*{text}"></textarea></div>
         <div><input class="btn btn-primary" type="submit" value="작성"></div>
     </form>
 </div>
 
+    <script>
+        function check(){
+            var title =document.getElementById('title').value;
+            var textarea =document.getElementById('textarea').value;
+            if(title === ""){
+                alert("제목을 입력해주세요.");
+                return false;
+            }
+            if(textarea === ""){
+                alert("내용을 입력해주세요.");
+                return false;
+            }
+            return true;
+        }
+    </script>
 </body>
 </html>
