--- a/src/main/resources/static/detailboard.html
+++ b/src/main/resources/static/detailboard.html
@@ -12,9 +12,9 @@
     <center>
         <h2>게시글 상세페이지</h2>
         <br>
-        <p><span>작성자 : </span><span th:text="${board.name}"></span></p>
+        <p><span>작성자 : </span><span th:text="${board.user.username}"></span></p>
         <span>제목 : </span><span th:text="${board.title}"></span>
-        <br>board
+        <br>
         <p>내용</p>
         <p th:text="${board.text}"></p>
 
@@ -25,6 +25,17 @@
             <input type="hidden" name="_method" value="delete"/>
         </form>
 
+        <form action="#" th:action="@{/api/board/}+${board.id}+@{/comment}" onsubmit="return check()" method="post" th:object="${postcomment}">
+            <input id="txt" type="text" th:field = "*{text}">
+            <input type="submit" class="btn btn-primary" value="댓글작성">
+        </form>
+
+        <div th:each="comment : ${comment}" name="fr"  class="table table-striped text-center">
+            <p   th:text="${comment.user.username}"></p>
+            <p   th:text="${comment.text}"></p>
+
+        </div>
+
     </center>
 
 
@@ -32,6 +43,14 @@
 </div>
 
     <script>
+        function check(){
+            var txt =document.getElementById('txt').value;
+            if(txt === ""){
+                alert("댓글을 입력해주세요.");
+                return false;
+            }
+            return true;
+        }
         $('#[[${board.id}]]editBoard').click(
             function(event) {
                 var boardId = "[[${board.id}]]";
