--- a/src/main/resources/static/board.html
+++ b/src/main/resources/static/board.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <script type = "text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
 
 </head>
 <body>
@@ -17,7 +18,10 @@
             <input type="text" class="form-control" id="title"  th:field = "*{title}">
         </div>
 
-        <div class="form-group"><textarea id="textarea" class="form-control"  placeholder="내용을 입력하세요." rows="6" th:field = "*{text}"></textarea></div>
+        <div class="form-group">
+            <label for="textarea">내용</label>
+            <textarea id="textarea" class="form-control"  placeholder="내용을 입력하세요." rows="6" th:field = "*{text}"></textarea>
+        </div>
         <div><input class="btn btn-primary" type="submit" value="작성"></div>
     </form>
 </div>
@@ -36,6 +40,16 @@
             }
             return true;
         }
+
+        $(document).ready(function(){
+            var user = '[[${user}]]'
+            console.log(user)
+            if(user == ''){
+                alert("로그인을 해야합니다.")
+                window.location.replace("/user/login")
+
+            }
+        });
     </script>
 </body>
 </html>
