--- a/src/main/resources/static/editboard.html
+++ b/src/main/resources/static/editboard.html
@@ -12,17 +12,20 @@
     <br>
     <form class = container action = "#" th:action="@{/api/board/}+${board.id}+@{/edit}" th:object="${board}" method="post">
 
-        <div class="form-group">
-            <label th:for=${board.id}+name>이름</label>
-            <input th:id=${board.id}+name type="text" class="form-control" th:text="${board.name}" th:field = "*{name}">
-        </div>
+<!--        <div class="form-group">-->
+<!--            <label th:for=${board.id}+name>이름</label>-->
+<!--            <p th:id=${board.id}+name type="text" class="form-control" th:text="${board.user.username}"></p>-->
+<!--        </div>-->
 
         <div class="form-group">
             <label th:for=${board.id}+title>제목</label>
-            <input th:id=${board.id}+title type="text" class="form-control"    th:field = "*{title}">
+            <input th:id=${board.id}+title type="text"  class="form-control" th:field = "*{title}">
         </div>
 
-        <div class="form-group"><textarea th:id=${board.id}+text class="form-control" th:text="${board.text}" placeholder="내용을 입력하세요." rows="6" th:field = "*{text}"></textarea></div>
+        <div class="form-group">
+            <label >내용</label>
+            <textarea th:id=${board.id}+text class="form-control" th:text="${board.text}" placeholder="내용을 입력하세요." rows="6" th:field = "*{text}"></textarea>
+        </div>
 
 <!--        <div><button id="submit" class="btn btn-primary" th:onclick=edit(${board.id}) value="작성">수정하기</button></div>-->
         <div><input type=submit class="btn btn-primary" value="제출"></div>
