--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <script type = "text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
 </head>
 <body>
 <div class="container">
@@ -20,7 +21,7 @@
     <a id="login-text" href="/user/login">
         로그인
     </a>
-    <a id="logout-text" href="/user/logout">
+    <a id="logout-text" href="/user/logout" style="display:none;">
         로그아웃
     </a>
 
@@ -45,7 +46,17 @@
     </tbody>
 </table>
 </div>
+<script>
+    $(document).ready(function(){
+        var user = '[[${user}]]'
+        console.log(user)
+        if(user != ''){
+            $(`#logout-text`).show();
+            $(`#login-text`).hide();
+        }
+    });
 
+</script>
 
 </body>
 </html>
