--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <script type = "text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
 
@@ -14,6 +15,19 @@
     <title>로그인 페이지</title>
 </head>
 <body>
+
+<div class = "nav" style="background: darkgray" >
+    <h4 class="logo">
+        <a href = "/" style="color: #ffffff;margin-left: 15px">Notice-Board</a>
+        <a th:if="${user} == 'null'" id="login-text" href="/user/login" style="float: right;color: #ffffff;margin-right: 15px">
+            로그인
+        </a>
+        <a th:if="${user} != 'null'" id="logout" href="/user/logout" style="float: right;color: #ffffff;margin-right: 15px">
+            로그아웃
+        </a>
+    </h4>
+
+</div>
 <div id="login-form">
     <div id="login-title">Log into Select Shop</div>
     <button id="login-kakao-btn" onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id=e874ec34648c4f9d1174e502e3f33ea2&redirect_uri=http://localhost:8080/user/kakao/callback&response_type=code'">
@@ -39,7 +53,7 @@
     $(document).ready(function(){
     var user = '[[${user}]]'
     console.log(user)
-    if(user != ''){
+    if(user != 'null'){
     alert("이미 로그인 되어있습니다.")
     window.location.replace("/")
 
