--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -13,19 +13,7 @@
     <meta charset="UTF-8">
     <title>회원가입 페이지</title>
     <script>
-        function onclickAdmin() {
-            // Get the checkbox
-            var checkBox = document.getElementById("admin-check");
-            // Get the output text
-            var box = document.getElementById("admin-token");
 
-            // If the checkbox is checked, display the output text
-            if (checkBox.checked == true){
-                box.style.display = "block";
-            } else {
-                box.style.display = "none";
-            }
-        }
 
         $(document).ready(function(){
             var user = '[[${user}]]'
@@ -43,6 +31,7 @@
 <div class = "nav" style="background: darkgray" >
     <h4 class="logo">
         <a href = "/" style="color: #ffffff;margin-left: 15px">Notice-Board</a>
+        <span th:if="${user} != 'null'" th:text="${user}+'님 환영합니다.'" style="color: #ffffff;margin-left: 20px"></span>
         <a th:if="${user} == 'null'" id="login-text" href="/user/login" style="float: right;color: #ffffff;margin-right: 15px">
             로그인
         </a>
