--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -45,7 +45,7 @@
                 <td></td>
                 <th scope="col"><a th:href="@{/api/board/}+${board.id}" th:text="${board.title}"> </a></th>
                 <th scope="col" th:text="${board.user.username}"></th>
-                <th scope="col" th:text="${#temporals.format(board.modifiedAt, 'yyyy-MM-dd')}"></th>
+                <th scope="col" th:text="${#temporals.format(board.modifiedAt, 'yyyy-MM-dd HH:mm')}"></th>
             </tr>
         </div>
     </tbody>
