--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -43,7 +43,7 @@
 </div>
 
 <div id="login-form">
-    <div id="login-title">Sign up Select Shop</div>
+    <div id="login-title">Sign up Notice Board</div>
 
     <form class="form" action="#" th:action="@{/user/signup}" th:object="${requestDto}" method="post" novalidate="" style="width:370px">
         <div class="form-group">
