--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -31,7 +31,7 @@
 </div>
 <div id="login-form">
     <div id="login-title">Log into Notice Board</div>
-    <button id="login-kakao-btn" onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id=e874ec34648c4f9d1174e502e3f33ea2&redirect_uri=http://localhost:8080/user/kakao/callback&response_type=code'">
+    <button id="login-kakao-btn" onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id=e874ec34648c4f9d1174e502e3f33ea2&redirect_uri=http://seungwook.shop/user/kakao/callback&response_type=code'">
         카카오로 로그인하기
     </button>
     <button id="login-id-btn" onclick="location.href='/user/signup'">
